# procedural-maze-generator

./: .augmentignore  .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  setup.py  test_examples.py  test_installation.py  test_minimal_imports.py  test_output_integration.py
.github/ISSUE_TEMPLATE/: demo_issue.md  showcase.md
.github/workflows/: demo.yml
config/: default_config.yaml
demo/: README.md  create_animated_demo.py  demo.sh  generate_gallery_samples.py  generate_samples.py  interactive_demo.py  run_demo.py
demo/configs/: demo_config.yaml  presentation_config.yaml
docs/: DEMO_VISIBILITY.md  _config.yml  index.md
docs/gallery/: INDEX.md  README.md
docs/gallery/algorithms/: dfs_maze.txt  kruskal_maze.txt  prim_maze.txt  wilson_maze.txt
docs/gallery/comparisons/: algorithm_comparison.md
docs/gallery/formats/: ascii_compact_example.txt  ascii_detailed_example.txt
docs/gallery/readme/: readme_example.txt
docs/gallery/solutions/: astar_solution.txt  bfs_solution.txt  dijkstra_solution.txt
examples/: basic_usage.py  output_directory_demo.py  performance_comparison.py
scripts/: create_placeholder_images.py  create_release_assets.py
src/maze_generator/: __init__.py  cli.py  config.py  maze.py
src/maze_generator/algorithms/: __init__.py  generators.py  solvers.py
src/maze_generator/utils/: __init__.py  file_utils.py  output_manager.py  performance.py  validation.py
src/maze_generator/visualization/: __init__.py  ascii_renderer.py  image_exporter.py  matplotlib_renderer.py  pygame_renderer.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_cli.py
tests/unit/: __init__.py  test_generators.py  test_maze.py  test_output_manager.py
